# kmp3

./: .gitignore  CMakeLists.txt  README.md  adtlib.cmake  cmake.sh  leaks.txt  name
aur/: PKGBUILD
include/adt/: Arena.hh  ArenaDeleterCRTP.hh  ArenaList.hh  ArgvParser.hh  Array.hh  BufferAllocator.hh  Directory.hh  Exception.hh  FlatArena.hh  FreeList.hh  FuncBuffer.hh  Gpa.hh  Heap.hh  IAllocator.hh  IArena.hh  IException.hh  ILogger.hh  IThreadPool.hh  List.hh  Logger-inl.hh  Logger.hh  Map.hh  MiMalloc.hh  Opt.hh  Pair.hh  Pipeline.hh  Pool.hh  PoolAllocator.hh  PoolSOA.hh  Queue.hh  QueueArray.hh  QueueMPMC.hh  QueueSPSC.hh  RBTree.hh  RefCount.hh  ReverseIt.hh  SList.hh  SOA.hh  ScratchBuffer.hh  Set.hh  (+36 more)
libs/adt/: AVLTree.hh  Allocator.hh  AllocatorPool.hh  Arena.hh  Arr.hh  Array.hh  Buddy.hh  BufferAllocator.hh  ChunkAllocator.hh  Directory.hh  FixedAllocator.hh  FreeList.hh  Heap.hh  IAllocator.hh  IException.hh  List.hh  Map.hh  MiMalloc.hh  MutexArena.hh  Opt.hh  Option.hh  OsAllocator.hh  Pair.hh  Pool.hh  PoolAllocator.hh  PoolSOA.hh  Queue.hh  QueueArray.hh  QueueSPMC.hh  QueueSPSC.hh  RBTree.hh  Result.hh  ReverseIt.hh  SList.hh  ScratchBuffer.hh  Set.hh  Span.hh  Span.inc  Span2D.hh  SpanDecl.hh  (+30 more)
libs/termbox2/: termbox2.h
src/: IWindow.hh  Image.hh  Player.cc  Player.hh  TextBuff.hh  app.cc  app.hh  audio.cc  audio.hh  common.cc  common.hh  common.inc  config.hh  defaults.hh  ffmpeg.cc  ffmpeg.hh  frame.cc  frame.hh  keybinds.hh  keys.hh  logs.hh  main.cc  mpris.cc  mpris.hh
src/kmp3/: CMakeLists.txt  IWindow.hh  Image.hh  Player.cc  Player.hh  app.cc  app.hh  audio.cc  audio.hh  common-inl.hh  common.cc  common.hh  common.inc  config.hh  defaults.hh  frame.cc  keybinds.hh  keys.hh  main.cc
src/kmp3/platform/: CMakeLists.txt
src/kmp3/platform/alsa/: CMakeLists.txt  Mixer.cc  Mixer.hh
src/kmp3/platform/ansi/: CMakeLists.txt  TermSize.hh  TextBuff.cc  TextBuff.hh  Win.cc  Win.hh  WinDraw.cc  WinInput.cc
src/kmp3/platform/apple/: CMakeLists.txt  Mixer.cc  Mixer.hh
src/kmp3/platform/chafa/: CMakeLists.txt  chafa.cc  chafa.hh
src/kmp3/platform/coreaudio/: CMakeLists.txt  Mixer.cc  Mixer.hh
src/kmp3/platform/ffmpeg/: CMakeLists.txt  Decoder.cc  Decoder.hh  dll.cc  dll.hh  pfn.cc  pfn.hh
src/kmp3/platform/mpris/: CMakeLists.txt  mpris.cc  mpris.hh
src/kmp3/platform/pipewire/: CMakeLists.txt  Mixer.cc  Mixer.hh
src/kmp3/platform/sndio/: CMakeLists.txt  Mixer.cc  Mixer.hh
src/platform/: Termbox.cc  Termbox.hh
src/platform/alsa/: Mixer.cc  Mixer.hh
src/platform/ansi/: TermSize.hh  TextBuff.cc  TextBuff.hh  Win.cc  Win.hh  WinDraw.cc  WinInput.cc  draw.cc  draw.hh  input.cc  input.hh
src/platform/apple/: Mixer.cc  apple.cc  apple.hh
src/platform/chafa/: Img.cc  Img.hh  chafa.cc  chafa.hh
src/platform/ffmpeg/: Decoder.cc  Decoder.hh
src/platform/ncurses/: Win.cc  Win.hh  input.cc  input.hh  tui.cc
src/platform/notcurses/: Win.cc  Win.hh
src/platform/pipewire/: Mixer.cc  Mixer.hh
src/platform/sixel/: Img.cc  Img.hh
src/platform/sndio/: Mixer.cc  Mixer.hh
src/platform/termbox2/: input.cc  input.hh  window.cc  window.hh
