# src/kmp3/platform/mpris/CMakeLists.txt

pkg_check_modules(SYSTEMD libsystemd)
if (SYSTEMD_FOUND)
    allPackageFlags(TARGET ${subProj} NAME SYSTEMD)
    target_compile_definitions(${subProj} PRIVATE "-DOPT_MPRIS")
    target_sources(${subProj} PRIVATE mpris.cc)
else()
    pkg_check_modules(BASU basu)
    if (BASU_FOUND)
        allPackageFlags(TARGET ${subProj} NAME BASU)
        target_compile_definitions(${subProj} PRIVATE "-DOPT_MPRIS -DOPT_BASU")
        target_sources(${subProj} PRIVATE mpris.cc)
    endif()
endif()
